# FexGE

./: .gitignore  CMakeLists.txt  Organizacion.md  README.md  main.cpp
Engine/: main.cpp
Engine/GameObj/: GameCom.cpp  GameCom.h  GameObj.cpp  GameObj.h  GameObjManager.cpp  GameObjManager.h
Engine/Gameloop/: Gameloop.cpp  Gameloop.h  Time.cpp  Time.h
Engine/Input/: Input.h  InputKeys.h
Engine/Input/Impl_SFML/: Impl_SFML_input.cpp
Engine/Plataform/: Window.h
Engine/Plataform/Impl_SFML/: Impl_SFML_window.cpp
